# serializer version: 1
# name: test_device_trait_command_parsing[clean_summary]
  CleanSummaryTrait(clean_area=24258125000, clean_count=296, clean_record_converter=CleanRecordConverter, clean_time=1442559, command=<RoborockCommand.GET_CLEAN_SUMMARY: 'get_clean_summary'>, converter=CleanSummaryConverter, dust_collection_count=None, last_clean_record=CleanRecord(area=81122500, avoid_count=None, begin=1738864366, begin_datetime=datetime.datetime(2025, 2, 6, 17, 52, 46, tzinfo=datetime.timezone.utc), clean_type=None, complete=None, duration=4358, dust_collection_status=None, end=1738868964, end_datetime=datetime.datetime(2025, 2, 6, 19, 9, 24, tzinfo=datetime.timezone.utc), error=None, finish_reason=None, map_flag=None, square_meter_area=81.1, start_type=None, wash_count=None), last_clean_t=None, records=[1756848207, 1754930385, 1753203976, 1752183435, 1747427370, 1746204046, 1745601543, 1744387080, 1743528522, 1742489154, 1741022299, 1740433682, 1739902516, 1738875106, 1738864366, 1738620067, 1736873889, 1736197544, 1736121269, 1734458038], square_meter_clean_area=24258.1)
# ---
# name: test_device_trait_command_parsing[clean_summary].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '******bc123',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': '**REDACTED**',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': '**REDACTED**',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-s7-maxv',
      'model': 'roborock.vacuum.a27',
      'name': '**REDACTED**',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'clean_summary': dict({
        'cleanArea': 24258125000,
        'cleanCount': 296,
        'cleanTime': 1442559,
        'records': list([
          1756848207,
          1754930385,
          1753203976,
          1752183435,
          1747427370,
          1746204046,
          1745601543,
          1744387080,
          1743528522,
          1742489154,
          1741022299,
          1740433682,
          1739902516,
          1738875106,
          1738864366,
          1738620067,
          1736873889,
          1736197544,
          1736121269,
          1734458038,
        ]),
      }),
      'device_features': dict({
        'featureInfo': list([
          111,
          112,
          113,
          114,
          115,
          116,
          117,
          118,
          119,
          120,
          122,
          123,
          124,
          125,
        ]),
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': True,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': True,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': True,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': True,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': True,
        'isCustomWaterBoxDistanceSupported': True,
        'isCustomizedCleanSupported': True,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': True,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': True,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': True,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': True,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': True,
        'isMultiMapSegmentTimerSupported': True,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': True,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': True,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': True,
        'isReSegmentSupported': True,
        'isRecordAllowed': False,
        'isRemoteSupported': True,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': True,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': True,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': True,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': True,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': True,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': True,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': True,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
        'newFeatureInfo': 633887780925447,
        'newFeatureInfoStr': '0000000000002000',
      }),
      'led_status': dict({
        'status': 0,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
      'status': dict({
        'adbumperStatus': list([
          0,
          0,
          0,
        ]),
        'autoDustCollection': 1,
        'avoidCount': 19,
        'backType': -1,
        'battery': 100,
        'cameraStatus': 3457,
        'chargeStatus': 1,
        'cleanArea': 20965000,
        'cleanTime': 1176,
        'collisionAvoidStatus': 1,
        'debugMode': 0,
        'dndEnabled': 0,
        'dockErrorStatus': 0,
        'dockType': 3,
        'dss': 169,
        'dustCollectionStatus': 0,
        'errorCode': 0,
        'fanPower': 102,
        'homeSecEnablePassword': 0,
        'homeSecStatus': 0,
        'inCleaning': 0,
        'inFreshState': 1,
        'inReturning': 0,
        'isExploring': 0,
        'isLocating': 0,
        'labStatus': 1,
        'lockStatus': 0,
        'mapPresent': 1,
        'mapStatus': 3,
        'mopForbiddenEnable': 1,
        'mopMode': 300,
        'msgSeq': 458,
        'msgVer': 2,
        'state': 8,
        'switchMapMode': 0,
        'unsaveMapFlag': 0,
        'unsaveMapReason': 0,
        'washPhase': 0,
        'washReady': 0,
        'waterBoxCarriageStatus': 1,
        'waterBoxMode': 203,
        'waterBoxStatus': 1,
        'waterShortageStatus': 0,
      }),
    }),
  })
# ---
# name: test_device_trait_command_parsing[dnd]
  DoNotDisturbTrait(start_hour=22, start_minute=0, end_hour=8, end_minute=0, enabled=1)
# ---
# name: test_device_trait_command_parsing[dnd].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '******bc123',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': '**REDACTED**',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': '**REDACTED**',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-s7-maxv',
      'model': 'roborock.vacuum.a27',
      'name': '**REDACTED**',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'device_features': dict({
        'featureInfo': list([
          111,
          112,
          113,
          114,
          115,
          116,
          117,
          118,
          119,
          120,
          122,
          123,
          124,
          125,
        ]),
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': True,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': True,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': True,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': True,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': True,
        'isCustomWaterBoxDistanceSupported': True,
        'isCustomizedCleanSupported': True,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': True,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': True,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': True,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': True,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': True,
        'isMultiMapSegmentTimerSupported': True,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': True,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': True,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': True,
        'isReSegmentSupported': True,
        'isRecordAllowed': False,
        'isRemoteSupported': True,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': True,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': True,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': True,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': True,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': True,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': True,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': True,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
        'newFeatureInfo': 633887780925447,
        'newFeatureInfoStr': '0000000000002000',
      }),
      'dnd': dict({
        'enabled': 1,
        'endHour': 8,
        'endMinute': 0,
        'startHour': 22,
        'startMinute': 0,
      }),
      'led_status': dict({
        'status': 0,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
      'status': dict({
        'adbumperStatus': list([
          0,
          0,
          0,
        ]),
        'autoDustCollection': 1,
        'avoidCount': 19,
        'backType': -1,
        'battery': 100,
        'cameraStatus': 3457,
        'chargeStatus': 1,
        'cleanArea': 20965000,
        'cleanTime': 1176,
        'collisionAvoidStatus': 1,
        'debugMode': 0,
        'dndEnabled': 0,
        'dockErrorStatus': 0,
        'dockType': 3,
        'dss': 169,
        'dustCollectionStatus': 0,
        'errorCode': 0,
        'fanPower': 102,
        'homeSecEnablePassword': 0,
        'homeSecStatus': 0,
        'inCleaning': 0,
        'inFreshState': 1,
        'inReturning': 0,
        'isExploring': 0,
        'isLocating': 0,
        'labStatus': 1,
        'lockStatus': 0,
        'mapPresent': 1,
        'mapStatus': 3,
        'mopForbiddenEnable': 1,
        'mopMode': 300,
        'msgSeq': 458,
        'msgVer': 2,
        'state': 8,
        'switchMapMode': 0,
        'unsaveMapFlag': 0,
        'unsaveMapReason': 0,
        'washPhase': 0,
        'washReady': 0,
        'waterBoxCarriageStatus': 1,
        'waterBoxMode': 203,
        'waterBoxStatus': 1,
        'waterShortageStatus': 0,
      }),
    }),
  })
# ---
# name: test_device_trait_command_parsing[status]
  StatusTrait(adbumper_status=None, auto_dust_collection=None, avoid_count=None, back_type=None, battery=100, camera_status=None, charge_status=None, clean_area=91287500, clean_fluid_status=None, clean_percent=None, clean_time=5405, cleaning_mode_options=[<CleaningMode.VACUUM: 'vacuum'>, <CleaningMode.VAC_AND_MOP: 'vac_and_mop'>, <CleaningMode.MOP: 'mop'>, <CleaningMode.CUSTOM: 'custom'>], clear_water_box_status=None, collision_avoid_status=None, command=<RoborockCommand.GET_STATUS: 'get_status'>, common_status=None, converter=DefaultConverter, corner_clean_mode=None, current_cleaning_mode=<CleaningMode.CUSTOM: 'custom'>, current_cleaning_mode_name='custom', current_map=0, debug_mode=None, dirty_water_box_status=None, distance_off=0, dnd_enabled=1, dock_cool_fan_status=None, dock_error_status=None, dock_state=<RoborockDockState.full: 'full'>, dock_type=None, dry_status=None, dss=None, dust_bag_status=None, dust_collection_status=None, error_code=<RoborockErrorCode.none: 0>, error_code_name='none', fan_power=106, fan_speed_mapping={101: 'quiet', 102: 'balanced', 103: 'turbo', 104: 'max', 108: 'max_plus', 105: 'off', 106: 'custom'}, fan_speed_name='custom', fan_speed_options=[<VacuumModes.QUIET: 'quiet'>, <VacuumModes.BALANCED: 'balanced'>, <VacuumModes.TURBO: 'turbo'>, <VacuumModes.MAX: 'max'>, <VacuumModes.MAX_PLUS: 'max_plus'>, <VacuumModes.OFF: 'off'>, <VacuumModes.CUSTOMIZED: 'custom'>], has_am=None, hatch_door_status=None, home_sec_enable_password=None, home_sec_status=None, in_cleaning=<RoborockInCleaning.complete: 0>, in_fresh_state=1, in_returning=0, in_warmup=None, is_exploring=None, is_locating=0, kct=None, lab_status=1, last_clean_t=None, lock_status=0, map_present=1, map_status=3, mop_forbidden_enable=0, mop_mode=None, mop_route_mapping={300: 'standard', 301: 'deep', 302: 'custom'}, mop_route_name=None, mop_route_options=[<CleanRoutes.STANDARD: 'standard'>, <CleanRoutes.DEEP: 'deep'>, <CleanRoutes.CUSTOMIZED: 'custom'>], msg_seq=515, msg_ver=2, rdt=None, repeat=None, replenish_mode=None, rss=None, square_meter_clean_area=91.3, state=<RoborockStateCode.charging: 8>, state_name='charging', subdivision_sets=None, switch_map_mode=None, unsave_map_flag=0, unsave_map_reason=4, wash_phase=None, wash_ready=None, wash_status=None, water_box_carriage_status=0, water_box_filter_status=None, water_box_mode=204, water_box_status=0, water_mode_mapping={200: 'off', 201: 'mild', 202: 'standard', 203: 'intense', 207: 'custom_water_flow', 204: 'custom'}, water_mode_name='custom', water_mode_options=[<WaterModes.OFF: 'off'>, <WaterModes.MILD: 'mild'>, <WaterModes.STANDARD: 'standard'>, <WaterModes.INTENSE: 'intense'>, <WaterModes.CUSTOM: 'custom_water_flow'>, <WaterModes.CUSTOMIZED: 'custom'>], water_shortage_status=None)
# ---
# name: test_device_trait_command_parsing[status].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '******bc123',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': '**REDACTED**',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': '**REDACTED**',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-s7-maxv',
      'model': 'roborock.vacuum.a27',
      'name': '**REDACTED**',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'device_features': dict({
        'featureInfo': list([
          111,
          112,
          113,
          114,
          115,
          116,
          117,
          118,
          119,
          120,
          122,
          123,
          124,
          125,
        ]),
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': True,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': True,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': True,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': True,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': True,
        'isCustomWaterBoxDistanceSupported': True,
        'isCustomizedCleanSupported': True,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': True,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': True,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': True,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': True,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': True,
        'isMultiMapSegmentTimerSupported': True,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': True,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': True,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': True,
        'isReSegmentSupported': True,
        'isRecordAllowed': False,
        'isRemoteSupported': True,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': True,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': True,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': True,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': True,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': True,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': True,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': True,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
        'newFeatureInfo': 633887780925447,
        'newFeatureInfoStr': '0000000000002000',
      }),
      'led_status': dict({
        'status': 0,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
      'status': dict({
        'battery': 100,
        'cleanArea': 91287500,
        'cleanTime': 5405,
        'distanceOff': 0,
        'dndEnabled': 1,
        'errorCode': 0,
        'fanPower': 106,
        'inCleaning': 0,
        'inFreshState': 1,
        'inReturning': 0,
        'isLocating': 0,
        'labStatus': 1,
        'lockStatus': 0,
        'mapPresent': 1,
        'mapStatus': 3,
        'mopForbiddenEnable': 0,
        'msgSeq': 515,
        'msgVer': 2,
        'state': 8,
        'unsaveMapFlag': 0,
        'unsaveMapReason': 4,
        'waterBoxCarriageStatus': 0,
        'waterBoxMode': 204,
        'waterBoxStatus': 0,
      }),
    }),
  })
# ---
# name: test_device_trait_command_parsing[volume]
  SoundVolumeTrait(volume=90)
# ---
# name: test_device_trait_command_parsing[volume].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '******bc123',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': '**REDACTED**',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': '**REDACTED**',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-s7-maxv',
      'model': 'roborock.vacuum.a27',
      'name': '**REDACTED**',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'device_features': dict({
        'featureInfo': list([
          111,
          112,
          113,
          114,
          115,
          116,
          117,
          118,
          119,
          120,
          122,
          123,
          124,
          125,
        ]),
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': True,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': True,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': True,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': True,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': True,
        'isCustomWaterBoxDistanceSupported': True,
        'isCustomizedCleanSupported': True,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': True,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': True,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': True,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': True,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': True,
        'isMultiMapSegmentTimerSupported': True,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': True,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': True,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': True,
        'isReSegmentSupported': True,
        'isRecordAllowed': False,
        'isRemoteSupported': True,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': True,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': True,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': True,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': True,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': True,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': True,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': True,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
        'newFeatureInfo': 633887780925447,
        'newFeatureInfoStr': '0000000000002000',
      }),
      'led_status': dict({
        'status': 0,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
      'sound_volume': dict({
        'volume': 90,
      }),
      'status': dict({
        'adbumperStatus': list([
          0,
          0,
          0,
        ]),
        'autoDustCollection': 1,
        'avoidCount': 19,
        'backType': -1,
        'battery': 100,
        'cameraStatus': 3457,
        'chargeStatus': 1,
        'cleanArea': 20965000,
        'cleanTime': 1176,
        'collisionAvoidStatus': 1,
        'debugMode': 0,
        'dndEnabled': 0,
        'dockErrorStatus': 0,
        'dockType': 3,
        'dss': 169,
        'dustCollectionStatus': 0,
        'errorCode': 0,
        'fanPower': 102,
        'homeSecEnablePassword': 0,
        'homeSecStatus': 0,
        'inCleaning': 0,
        'inFreshState': 1,
        'inReturning': 0,
        'isExploring': 0,
        'isLocating': 0,
        'labStatus': 1,
        'lockStatus': 0,
        'mapPresent': 1,
        'mapStatus': 3,
        'mopForbiddenEnable': 1,
        'mopMode': 300,
        'msgSeq': 458,
        'msgVer': 2,
        'state': 8,
        'switchMapMode': 0,
        'unsaveMapFlag': 0,
        'unsaveMapReason': 0,
        'washPhase': 0,
        'washReady': 0,
        'waterBoxCarriageStatus': 1,
        'waterBoxMode': 203,
        'waterBoxStatus': 1,
        'waterShortageStatus': 0,
      }),
    }),
  })
# ---
